bin_PROGRAMS += \
    example/hello/hopest_helloc \
    example/hello/hopest_hellof \
    example/hello/hopest_hellof90

example_hello_hopest_helloc_SOURCES =  example/hello/helloc.c  
example_hello_hopest_hellof_SOURCES =  example/hello/hellof.f 
example_hello_hopest_hellof90_SOURCES =  example/hello/hellof90.f90 

