bin_PROGRAMS += \
    example/hello/hopest_helloc \
    example/hello/hopest_hellof77 \
    example/hello/hopest_hellof90

example_hello_hopest_helloc_SOURCES =  example/hello/helloc.c  
example_hello_hopest_hellof77_SOURCES =  example/hello/hellof77.f 
example_hello_hopest_hellof90_SOURCES =  example/hello/hellof90.f90 

