bin_PROGRAMS += \
    example/hello/hopest_helloc \
    example/hello/hopest_hellof77 \
    example/hello/hopest_hellof90
## This is not yet included in the source
##  example/hello/hopest_hopest

example_hello_hopest_helloc_SOURCES = example/hello/helloc.c
example_hello_hopest_hellof77_SOURCES = example/hello/hellof77.f
example_hello_hopest_hellof90_SOURCES = example/hello/hellof90.f90

if HOPEST_WITH_HDF5
## This is not yet included in the source
## example_hello_hopest_hopest_SOURCES =  example/hello/hopest.f90
endif
