bin_PROGRAMS += \
    example/hopest/hopest
## This is not yet included in the source
##  example/hello/hopest_hopest



if HOPEST_WITH_HDF5
## This is not yet included in the source
## example_hello_hopest_hopest_SOURCES =  example/hello/hopest.f90
example_hopest_hopest_SOURCES = example/hopest/hopest.f90
endif

example_hopest_hopest_CPPFLAGS = $(AM_CPPFLAGS) $(CPPFLAGS) $(HOPEST_CPPFLAGS)

